# baresip

./: baresip.service  manifest
cmake/: FindLADSPA.cmake  FindZMS.cmake  modules.cmake
ipk/: control
modules/ladspa/: CMakeLists.txt  ladspa_filter.cpp  ladspa_filter.h
modules/menu/: menu.c
modules/nexeo_ib/: CMakeLists.txt  nexeo_ib.c  nexeo_ib.h  nexeo_ib_inbound.c  nexeo_ib_outbound.c
modules/nexeo_mqtt/: CMakeLists.txt  NexeoMqttConnection.cpp  NexeoMqttConnection.h  NexeoMqttPublisher.cpp  NexeoMqttPublisher.h  NexeoMqttSubscriber.cpp  NexeoMqttSubscriber.h  nexeo_mqtt.cpp
modules/nexeo_zms/: CMakeLists.txt  nexeo_zms.cpp  nexeo_zms_inbound.cpp  nexeo_zms_inbound.h  nexeo_zms_outbound.cpp  nexeo_zms_outbound.h
